# Flops-Agent

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml
skills/pre_push_checklist/: SKILL.md
skills/project_understanding/: SKILL.md
skills/test_skill/: SKILL.md
skills/test_skill/scripts/: test.sh
src/flops/: __init__.py  __main__.py  agent.py  cli.py  command.py  compact.py  config.py  const.py  engine.py  error.py  event.py  llm.py  logger.py  memory.py  registry.py  schemas.py  session.py  skill.py  snapshot.py  state.py
src/flops/tools/: __init__.py  agent_tool.py  file_edit_tool.py  file_read_tool.py  file_write_tool.py  glob_tool.py  grep_tool.py  list_tool.py  mem_tool.py  python_tool.py  rm_tool.py  shell_tool.py  skill_tool.py  tool.py  weather_tool.py  web_tool.py
tests/: test_compact.py  test_config.json  test_config.py  test_python_sandbox.py  test_session.py  test_shell_safety.py  test_tool.py
